HUGE performance improvements and animation control

--- a/birds project/birds project.CSharp.csproj
+++ b/birds project/birds project.CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\BirdAgentConfig.cs" />
     <Compile Include="Assets\Scripts\BirdFollowCamera.cs" />
     <Compile Include="Assets\Scripts\BirdType.cs" />
+    <Compile Include="Assets\Scripts\BirdWatchCamera.cs" />
     <Compile Include="Assets\Scripts\PredatoryBehaviour.cs" />
     <Compile Include="Assets\Scripts\VRExtensionMethods.cs" />
     <Compile Include="Assets\Scripts\World.cs" />
