Scene Update for graphic quality

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ birds project/Temp/
 birds project/Library/
 birds project/Assembly-CSharp.csproj
 files/bird.apk
+birds project/Assembly-CSharp-Editor.csproj
